--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4324,7 +4324,7 @@ header.sticky {
 
 
 /* ----------------------------- estilos freitas */
-
+/* 
 .hero:after {
     content: "";
     position: absolute;
@@ -4334,12 +4334,8 @@ header.sticky {
     width: 100%;
     transition: all 0.8s;
     opacity: 1;
-    background-size: 100% 100%;
-    background: -moz-linear-gradient(top, rgba(186,140,87,0.32) 0%, rgba(117,90,61,0.4) 39%, rgba(37,33,32,0.84) 84%, rgba(37,33,32,1) 100%);
-    background: -webkit-linear-gradient(top, rgba(186,140,87,0.32) 0%,rgba(117,90,61,0.4) 39%,rgba(37,33,32,0.84) 84%,rgba(37,33,32,1) 100%);
-    background: linear-gradient(to bottom, rgba(186,140,87,0.32) 0%,rgba(117,90,61,0.4) 39%,rgba(37,33,32,0.84) 84%,rgba(37,33,32,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#52ba8c57', endColorstr='#252120',GradientType=0 );
-}
+    background: transparent url(../img/bg-menu-2.jpg) repeat top;
+} */
 
 .intro .intro-photograph {
     width: 100%;
