--- a/index.css
+++ b/index.css
@@ -301,20 +301,23 @@ input {
 @media (max-width: 1350px) {
     .cont__inn {
         padding-left: 6rem;
-        padding-right: 2rem
+        padding-right: 2rem;
+        display: flex;
     }
 }
 
 @media (max-width: 980px) {
     .cont__inn {
         padding-right: 6rem;
-        height: auto
+        height: auto;
+        display: block;
     }
 }
 
 @media (max-width: 980px) {
     .cont__inn {
-        padding: 4rem
+        display: block;
+        padding: 4rem;
     }
 }
 
@@ -548,13 +551,13 @@ input {
 }
 
 .quote__cont {
-    width: 60%;
+    width: 53%;
     float: right;
     padding-left: 4rem;
     height: 100%;
     /* -webkit-transform: scale(0.95) rotateY(-15deg) rotateX(3deg) rotate(0deg); */
     /* transform: scale(1) rotateY(-15deg) rotateX(3deg) rotate(0deg); */
-    /* opacity: 0.95; */
+    opacity: 0.97;
 }
 
 .quote__cont__inn {
@@ -630,9 +633,9 @@ input {
 
 .quote__card {
     background-color: #fff;
-    padding: 3rem;
+    padding: 2rem;
     padding-bottom: 8rem;
-    padding-top: 4.5rem;
+    padding-top: 3.5rem;
     position: relative;
     /* border-radius: 0.5rem; */
     width: 100%;
@@ -641,7 +644,7 @@ input {
     margin-top: 5.5rem;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    display: inline-block
+    display: inline-block;
 }
 
 .quote__card:hover {
@@ -656,6 +659,10 @@ input {
     -webkit-transform: scale(1.15) translateY(-42%);
     -ms-transform: scale(1.15) translateY(-42%);
     transform: scale(1.15) translateY(-42%)
+}
+.quote__image--img {
+    width: 100%;
+    margin-top: -1.5rem;
 }
 
 @media (max-width: 640px) {
