--- a/index.css
+++ b/index.css
@@ -353,6 +353,9 @@ input {
     width: 100%;
     height: 100%;
     z-index: -1;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
 }
 
 .cont--gradient:before {
@@ -444,9 +447,9 @@ input {
 .content__text {
     font-size: 2rem;
     line-height: 1.2em;
-    opacity: 0.6;
+    opacity: 0.8;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
-    filter: alpha(opacity=60)
+    filter: alpha(opacity=60);
 }
 
 @media (max-width: 640px) {
@@ -995,7 +998,7 @@ input {
     padding-top: 10px;
     padding-bottom: 10px;
     background-color: transparent;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .hero-contacts-bg {
