--- a/index.css
+++ b/index.css
@@ -332,13 +332,15 @@ input {
     width: 40%;
     height: auto;
     padding-top: 0;
-    margin-top: -109px;
+    margin-top: -125px;
 }
 
 @media (max-width: 980px) {
     .cont__content {
         width: 100%;
-        padding-top: 0
+        padding-top: 0;
+        margin-top: 0;
+        margin-bottom: 3rem;
     }
 }
 
@@ -635,6 +637,7 @@ input {
 }
 .social-link-color {
     color: #e7e7e7;
+    line-height: 2rem;
 }
 .quote__card {
     background-color: #fff;
@@ -766,7 +769,8 @@ input {
 }
 
 .btn--underline {
-    position: relative
+    position: relative;
+    padding-left: 2.5rem;
 }
 
 .btn--underline:before {
@@ -819,13 +823,16 @@ input {
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.13);
     position: relative;
     -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out
+    transition: all 0.3s ease-in-out;
+    margin-right: 20px;
 }
 
 .btn--gradient__text {
     display: inline-block;
     position: relative;
-    z-index: 2
+    z-index: 2;
+    line-height: 17px;
+    padding-left: 30px;
 }
 
 .btn--gradient:before {
@@ -942,7 +949,7 @@ input {
     position: absolute;
     left: 0px;
     right: 0px;
-    bottom: 0px;
+    bottom: -3px;
     z-index: 1;
     display: -webkit-box;
     display: -webkit-flex;
@@ -995,8 +1002,8 @@ input {
     display: -ms-flexbox;
     display: flex;
     width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     background-color: transparent;
     justify-content: space-around;
 }
@@ -1008,7 +1015,7 @@ input {
     bottom: 0px;
     width: 100%;
     background-color: #000000fc;
-    background-image: url('https://s3.us-west-2.amazonaws.com/secure.notion-static.com/f04eb319-3cdd-43ec-99c8-89dc36774ba0/templateflyers.png?AWSAccessKeyId=ASIAT73L2G45EQEMSE2M&Expires=1540667323&Signature=dh%2Fy9AAmIDf%2Bu1EQoFqEaCzIJoQ%3D&x-amz-security-token=FQoGZXIvYXdzEDQaDAEhtH3ZHqnyKB6WRyK3A3QpCvWO9pNal0lmlsO8CKkGphTn8CbTvRhAvaDXjyKqLW8DqzFHcspddJqkmGYMUhq%2BxoIRvBaX1WQdHIOIyYdcRMztbF3p4kqc3m%2FKoGVzQx8WTMx925nJnC49ySzr8j9PUHIX9%2BHZEzDJ5Yw3t8oYCWTFeRtUZn5kT5opfVzy3c81O7%2B%2BoVrB0aMnwXjvQ8U6QlerFWrdGe1zN6a1G%2FlJV7vOgZsIYK0BnlmVu4n8jlEJ5BkJgC6%2Blk1iHVPH4yDPA5hm6rEatdDnYuquqeTtDf8HQALTsfHRhu3n9Tbp5ypSAb7dbu5QESmcFEFFSzvXOcZIg%2Bv4DLqyx406RZbs6N7bT4EQWvIHp9jN9ndOtXr0S0VTTgf4tslWTWiwFuk4ZPyjd6j4RsbhE6AWOkkzsbCSvCekiJI%2FxFefNsrmX%2F1kissRGt60MgdHaiJ3o7g0Bh7OBt0fY1jCs18mf8P9Eh4DJKwIfXcXQdRcvQE%2Ff%2Ff0Wx0pVunPcyUZpzUsk3PDMXBGgOLu%2B7CpWchnUSinGGeOWswauW3Rs5%2FFtMZstm0dgBlsolG9%2BmDsZ0gXnbu9qBPB8eko3sLN3gU%3D');
+    background-image: url('img/bg-pattern.png');
     background-repeat: repeat-x;
     background-size: 11%;
     opacity: 1;
@@ -1079,8 +1086,11 @@ input {
 }
 
 .hero-social-icon {
-    width: 12px;
-    margin-right: 10px;
+    width: 24px;
+    margin-right: 0;
+    position: absolute;
+    left: 0;
+    margin-top: -4px;
 }
 
 @media (max-width: 991px) {
@@ -1276,6 +1286,7 @@ input {
     width: 100%;
     clear: both;
     position: relative;
+    font-size: 2rem;
 }
 
 .hero-contact-subtitle {
@@ -1283,6 +1294,7 @@ input {
     width: 100%;
     clear: both;
     position: relative;
+    line-height: 2rem;
 }
 
 .hero-contact-live {
@@ -1290,4 +1302,15 @@ input {
     width: 100%;
     clear: both;
     position: relative;
+    color: #dfc998;
+    line-height: 2.2rem;
+    font-weight: 600;
 }
+.hero-contact-live .hero-social-icon {
+    width: 1.5rem;
+    position: relative;
+}
+
+.hero-contact-link {
+    line-height: 2rem;
+}   
