--- a/index.css
+++ b/index.css
@@ -340,7 +340,7 @@ input {
     .cont__content {
         width: 100%;
         padding-top: 0;
-        margin-top: 0;
+        margin-top: 4rem;
         margin-bottom: 3rem;
     }
 }
