--- a/index.css
+++ b/index.css
@@ -227,7 +227,9 @@ body {
     font-family: Lato;
     overflow-x: hidden !important;
     overflow-y: auto;
-    -webkit-font-smoothing: antialiased
+    -webkit-font-smoothing: antialiased;
+    background-color: #2f2820;
+    background-size: cover;
 }
 
 @media (max-width:650px) {
@@ -358,9 +360,7 @@ input {
 }
 
 .cont--gradient {
-    background: -webkit-linear-gradient(43deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgb(74, 50, 42, .8) 82%), url(img/bg-hero-ambient.jpg);
-    background: -o-linear-gradient(43deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgb(74, 50, 42, .8) 82%), url(img/bg-hero-ambient.jpg);
-    background: linear-gradient(47deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgb(74, 50, 42, .8) 82%), url(img/bg-hero-ambient.jpg);
+    /* background:linear-gradient(47deg,rgba(0,0,0,.87) 0%,rgba(60,41,34,.7) 26%,rgb(74,50,42,.8) 82%),url(img/bg-hero-ambient.jpg); */
     position: fixed;
     top: 0;
     left: 0;
@@ -369,7 +369,7 @@ input {
     z-index: -1;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: bottom
+    background-position: bottom;
 }
 
 .cont--gradient:before {
