--- a/index.css
+++ b/index.css
@@ -1327,4 +1327,7 @@ input {
     width: 100%;
     margin: 0 auto;
     display: flex;
+        background: black;
 }
+iframe {
+    margin: 0 auto;}
