--- a/index.css
+++ b/index.css
@@ -360,9 +360,9 @@ input {
 }
 
 .cont--gradient {
-    background:-webkit-linear-gradient(43deg,rgba(0,0,0,.87) 0%,rgba(60,41,34,.7) 26%,rgb(74,50,42,.8) 82%),url(img/bg-hero-ambient.jpg);
-    background:-o-linear-gradient(43deg,rgba(0,0,0,.87) 0%,rgba(60,41,34,.7) 26%,rgb(74,50,42,.8) 82%),url(img/bg-hero-ambient.jpg);
-    background:linear-gradient(47deg,rgba(0,0,0,.87) 0%,rgba(60,41,34,.7) 26%,rgb(74,50,42,.8) 82%),url(img/bg-hero-ambient.jpg);
+    background: -webkit-linear-gradient(43deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgb(74, 50, 42, .8) 82%), url(img/bg-hero-ambient.jpg);
+    background: -o-linear-gradient(43deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgb(74, 50, 42, .8) 82%), url(img/bg-hero-ambient.jpg);
+    background: linear-gradient(47deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgb(74, 50, 42, .8) 82%), url(img/bg-hero-ambient.jpg);
     position: fixed;
     top: 0;
     left: 0;
@@ -375,7 +375,7 @@ input {
 }
 
 .cont--gradient:before {
-  content: '';
+    content: '';
     position: absolute;
     color: #ac9374;
     background-image: -webkit-linear-gradient(137deg, #795548 0%, #3c2922 26%, #000 82%);
@@ -1323,11 +1323,18 @@ input {
         background-position: left
     }
 }
+
 .iframe {
     width: 100%;
     margin: 0 auto;
-    display: flex;
-        background: black;
+    display: none;
+    background: black;
 }
+
 iframe {
-    margin: 0 auto;}
+    margin: 0 auto;
+}
+
+.exibe {
+    display: flex;
+}
