--- a/css/index.css
+++ b/css/index.css
@@ -359,12 +359,25 @@ input {
     }
 }
 
+/* 
 .cont--gradient {
     background: -webkit-linear-gradient(43deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgb(74, 50, 42, .8) 82%),
         url(../img/bg-hero-ambient.jpg);
     background: -o-linear-gradient(43deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgb(74, 50, 42, .8) 82%),
         url(../img/bg-hero-ambient.jpg);
     background: linear-gradient(47deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgb(74, 50, 42, .8) 82%), url(../img/bg-hero-ambient.jpg);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+} */
+.cont--gradient {
+    background: linear-gradient(47deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgba(74, 50, 42, .8) 82%), url(../img/bg-hero-ambient.jpg);
     position: fixed;
     top: 0;
     left: 0;
@@ -1337,9 +1350,7 @@ input {
         padding: 0
     }
 
-    .cont--gradient {
-        background-position: left
-    }
+
 }
 
 .iframe {
