--- a/css/index.css
+++ b/css/index.css
@@ -359,25 +359,13 @@ input {
     }
 }
 
-/* 
+
 .cont--gradient {
-    background: -webkit-linear-gradient(43deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgb(74, 50, 42, .8) 82%),
+    /* background: -webkit-linear-gradient(43deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgb(74, 50, 42, .8) 82%),
         url(../img/bg-hero-ambient.jpg);
     background: -o-linear-gradient(43deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgb(74, 50, 42, .8) 82%),
-        url(../img/bg-hero-ambient.jpg);
-    background: linear-gradient(47deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgb(74, 50, 42, .8) 82%), url(../img/bg-hero-ambient.jpg);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: bottom;
-} */
-.cont--gradient {
-    background: linear-gradient(47deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgba(74, 50, 42, .8) 82%), url(../img/bg-hero-ambient.jpg);
+        url(../img/bg-hero-ambient.jpg); */
+    background: url(../img/bg-hero-ambient.jpg);
     position: fixed;
     top: 0;
     left: 0;
@@ -389,16 +377,16 @@ input {
     background-position: bottom;
 }
 
-.cont--gradient:before {
+.cont--gradient:after {
     content: '';
     position: absolute;
     color: #ac9374;
-    background-image: -webkit-linear-gradient(137deg, #795548 0%, #3c2922 26%, #000 82%);
-    background-image: -o-linear-gradient(137deg, #795548 0%, #3c2922 26%, #000 82%);
-    background-image: linear-gradient(-47deg, #795548 0%, #3c2922 26%, #000 82%);
+    background-image: -webkit-linear-gradient(43deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgb(74, 50, 42, .8) 82%);
+    background-image: -o-linear-gradient(43deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgb(74, 50, 42, .8) 82%);
+    background-image: linear-gradient(43deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgb(74, 50, 42, .8) 82%);
     width: 100%;
     height: 100%;
-    display: none;
+    opacity: 1;
     -webkit-transform: translateZ(0);
     -ms-transform: translateZ(0);
     transform: translateZ(0)
@@ -560,9 +548,7 @@ input {
     zoom: 1
 }
 
-.only-mobile {
-    display: none;
-}
+
 
 .quote__cont__inn:after,
 .quote__cont__inn:before {
@@ -1223,71 +1209,9 @@ input {
         columns: 1
     }
 
-    .only-mobile {
-        display: block;
-    }
+
 }
 
-@media (max-width:479px) {
-
-    .hero-contact,
-    .hero-contacts-wrapper {
-        -webkit-box-align: start;
-        -webkit-align-items: flex-start;
-        -ms-flex-align: start;
-        align-items: flex-start
-    }
-
-    .hero-contact {
-        width: 100%;
-        padding-top: 24px;
-        padding-bottom: 24px;
-        -webkit-box-orient: horizontal;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: row;
-        -ms-flex-direction: row;
-        -webkit-box-pack: start;
-        -webkit-justify-content: flex-start;
-        -ms-flex-pack: start;
-        justify-content: flex-start;
-        align-items: center;
-        text-align: left;
-        padding-left: 15%
-    }
-
-    .hero-contact-icon {
-        margin-right: 16px;
-        margin-bottom: 0
-    }
-
-    .hero-contacts {
-        -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-        flex-flow: column;
-        padding: 16px 16px 16px 60px;
-        margin: 0 auto;
-        width: 100%
-    }
-
-    .hero-social {
-        margin-bottom: 48px
-    }
-
-    .hero-social-link {
-        height: 40px;
-        padding-right: 12px;
-        padding-left: 12px
-    }
-
-    .hero-social-icon {
-        margin-right: 0
-    }
-
-    .hero-social-text {
-        display: none
-    }
-}
 
 .head__cont {
     display: flex;
@@ -1367,4 +1291,73 @@ iframe {
 .exibe {
     display: flex;
     overflow: hidden;
+}
+
+.only-mobile {
+    display: none;
+}
+
+@media (max-width:479px) {
+
+    .hero-contact,
+    .hero-contacts-wrapper {
+        -webkit-box-align: start;
+        -webkit-align-items: flex-start;
+        -ms-flex-align: start;
+        align-items: flex-start
+    }
+
+    .hero-contact {
+        width: 100%;
+        padding-top: 24px;
+        padding-bottom: 24px;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+        -webkit-box-pack: start;
+        -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
+        align-items: center;
+        text-align: left;
+        padding-left: 15%
+    }
+
+    .hero-contact-icon {
+        margin-right: 16px;
+        margin-bottom: 0
+    }
+
+    .hero-contacts {
+        -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        flex-flow: column;
+        padding: 16px 16px 16px 60px;
+        margin: 0 auto;
+        width: 100%
+    }
+
+    .hero-social {
+        margin-bottom: 48px
+    }
+
+    .hero-social-link {
+        height: 40px;
+        padding-right: 12px;
+        padding-left: 12px
+    }
+
+    .hero-social-icon {
+        margin-right: 0
+    }
+
+    .hero-social-text {
+        display: none
+    }
+
+    .only-mobile {
+        display: block;
+    }
 }
