--- a/css/index.css
+++ b/css/index.css
@@ -379,19 +379,22 @@ input {
 
 .cont--gradient:after {
     content: '';
-    position: absolute;
+    position: fixed;
     color: #ac9374;
+    background: rgba(92, 72, 48, 0.7);
     background: -webkit-linear-gradient(43deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgb(74, 50, 42, .8) 82%);
     background: -o-linear-gradient(43deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgb(74, 50, 42, .8) 82%);
     background: linear-gradient(43deg, rgba(0, 0, 0, .87) 0%, rgba(60, 41, 34, .7) 26%, rgb(74, 50, 42, .8) 82%);
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
     opacity: 1;
+    padding: 0;
     -webkit-transform: translateZ(0);
     -ms-transform: translateZ(0);
-    transform: translateZ(0)
+    transform: translateZ(0);
+    z-index: 9999;
 }
-
 
 
 .head__logo {
